Bug 397853 - Window Background color setting decreases each time settings are opened and saved
Summary: Window Background color setting decreases each time settings are opened and s...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 4.1.1
Platform: Arch Linux Linux
: NOR minor
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-24 22:44 UTC by wkg28406
Modified: 2019-05-03 13:08 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description wkg28406 2018-08-24 22:44:20 UTC
Krita 4.1.1-4 (Arch Linux)

Tested with fresh configuration (removing existing ~/.local/share/krita, ~/.config/krita*)

Reproducible: Always with specific color, not with defaults or all other colors that were tested.

Steps:
1. Open Krita
2. Settings > Configure Krita > General > Window > Window Background
3. Set Window Background color to #222222
4. Exit out of settings with OK buttons
5. Settings > Configure Krita, then hit OK

Repeat step 5. The background gets darker and darker. The Window Background color goes down in order: #191919, #0f0f0f, #080808, #040404, #020202, #010101, #000000.

In my limited testing this seems to happen with many colors starting with a "2".

Workaround: Do not use #222222 or other possible affected colors for Window Background color.
Comment 1 mvowada 2018-08-25 16:55:45 UTC
Yes, I can easily reproduce this on Ubuntu 14.04 as well. Here it happens when the starting digit is "1" or "2" (like #111111, #23cd45). 

Tested on Ubuntu 14.04 using Krita 4.2.0-pre-alpha (git 04931e4). Thanks for the clear report
Comment 2 wkg28406 2018-09-28 16:42:09 UTC
With the new start screen in 4.1.3, is Window Background Color used for anything anymore?
Comment 3 wkg28406 2018-09-28 17:15:00 UTC
(In reply to bugs from comment #2)
> With the new start screen in 4.1.3, is Window Background Color used for
> anything anymore?

Found out it's used with "Multiple Document: Subwindow" mode.

Possibly use global theme color for background? This is what the new start screen does.

Curious why this bug occurs when it doesn't happen with Canvas Border Color.
Comment 4 Halla Rempt 2019-05-03 13:08:25 UTC
Git commit 0174960d72e112f20a1933c9a3ce3d24535c34d4 by Boudewijn Rempt.
Committed on 03/05/2019 at 13:07.
Pushed by rempt into branch 'master'.

Fix the drifting of the MDI area background color

All the conversions between QColor and KoColor were giving us all
kinds of rounding errors. Now we use KoColor throughout. A bit
overkill for a gui element, but that's what the color selector
gives us.

M  +4    -1    libs/ui/KisMainWindow.cpp
M  +4    -4    libs/ui/dialogs/kis_dlg_preferences.cc
M  +7    -4    libs/ui/kis_config.cc
M  +2    -2    libs/ui/kis_config.h
M  +7    -7    libs/widgets/kis_color_button.cpp

https://invent.kde.org/kde/krita/commit/0174960d72e112f20a1933c9a3ce3d24535c34d4