Fix the drifting of the MDI area background color

All the conversions between QColor and KoColor were giving us all
kinds of rounding errors. Now we use KoColor throughout. A bit
overkill for a gui element, but that's what the color selector
gives us.

BUG:397853